--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.accessibilitytraining.android">
+        android:theme="@style/Theme.AccessibilityTraining.Android">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.accessibilitytraining.android.NoActionBar">
+            android:theme="@style/Theme.AccessibilityTraining.Android.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
